// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c3 {
  padding-left: 10px;
  padding-right: 10px;
}

.c4 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    display: inline;
  }
}

<style>
{
  "IS1": {
    "textDecoration": "none",
  },
  "IS2": {
    "textDecoration": "none",
  },
  "S1": {
    "color": "rgba(105,105,105,1)",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "15px",
    "margin-right": "0px",
    "padding-top": "4px",
  },
  "S10": {
    "color": "rgba(0,102,153,1)",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "15px",
    "height": "15px",
    "margin-right": "10px",
    "padding-top": "0px",
    "text-align": "right",
  },
  "S11": {
    "-ms-flex-align": "center",
    "-ms-flex-direction": "row",
    "-webkit-align-items": "center",
    "-webkit-box-align": "center",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "align-items": "center",
    "flex-direction": "row",
    "margin-right": "0px",
    "padding-top": "10px",
  },
  "S12": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S13": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S14": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S2": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S3": {
    "color": "inherit",
    "font-family": "inherit",
    "font-size": "inherit",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S4": {
    "color": "inherit",
    "font-family": "inherit",
    "font-size": "inherit",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S5": {
    "color": "rgba(0,102,153,1)",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "15px",
    "height": "15px",
    "margin-right": "0px",
    "padding-top": "0px",
    "text-align": "left",
  },
  "S6": {
    "-ms-flex-align": "center",
    "-ms-flex-direction": "row",
    "-webkit-align-items": "center",
    "-webkit-box-align": "center",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "align-items": "center",
    "flex-direction": "row",
    "margin-right": "0px",
    "padding-top": "10px",
  },
  "S7": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S8": {
    "color": "inherit",
    "font-family": "inherit",
    "font-size": "inherit",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S9": {
    "color": "inherit",
    "font-family": "inherit",
    "font-size": "inherit",
    "margin-right": "0px",
    "padding-top": "0px",
  },
}
</style>

<div
  className="c0 S14"
>
  <div
    className="c1 S2"
  >
    <div
      className="S1"
      data-testid="results-message"
    >
      Showing 4 - 6 of 21 results
    </div>
  </div>
  <div
    className="c2 S13"
  >
    <div
      className="c3 S7"
    >
      <a
        className="IS1"
        href="./1"
      >
        <div
          className="S6"
          data-testid="pagination-button-previous"
        >
          <div
            className="S5"
          >
            <span
              className="S4"
            >
              Previous
              <span
                className="c4 S3"
              >
                 page
              </span>
            </span>
          </div>
        </div>
      </a>
    </div>
    <div
      className="c3 S12"
    >
      <a
        className="IS2"
        href="./3"
      >
        <div
          className="S11"
          data-testid="pagination-button-next"
        >
          <div
            className="S10"
          >
            <span
              className="S9"
            >
              Next
              <span
                className="c4 S8"
              >
                 page
              </span>
            </span>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`2. renders with no results 1`] = `
.c2 {
  padding-left: 10px;
  padding-right: 10px;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

@media (min-width:768px) {
  .c2 {
    padding-left: 0;
    padding-right: 0;
  }
}

<style>
{
  "S1": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S2": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S3": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-right": "0px",
    "padding-top": "0px",
  },
  "S4": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "flex-direction": "column",
    "margin-right": "0px",
    "padding-top": "0px",
  },
}
</style>

<div
  className="c0 S4"
>
  <div
    className="c1 S3"
  >
    <div
      className="c2 S1"
    />
    <div
      className="c2 S2"
    />
  </div>
</div>
`;
